Projetos/ACBrFramework/jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h


typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;
#define DllImport extern "C"
#define DllImport extern

DllImport int ECF_LeituraMemoriaFiscalArquivoData(const INTPTR ecfHandle, const double dataInicial, const double dataFinal, const PCHAR nomeArquivo, const BOOL simplificada);

DllImport int ECF_LeituraMemoriaFiscalArquivoReducao(const INTPTR ecfHandle, const int reducaoInicial, const int reducaoFinal, const PCHAR nomeArquivo, const BOOL simplificada);

DllImport int ECF_LeituraMemoriaFiscalData(const INTPTR ecfHandle, const double dataInicial, const double dataFinal, const BOOL simplificada);

DllImport int ECF_LeituraMemoriaFiscalSerialData(const INTPTR ecfHandle, const double dataInicial, const double dataFinal, const BOOL simplificada, PCHAR buffer, const int bufferLen);

DllImport int ECF_LeituraMemoriaFiscalSerialReducao(const INTPTR ecfHandle, const int reducaoInicial, const int reducaoFinal, const BOOL simplificada, PCHAR buffer, const int bufferLen);

DllImport int ECF_SetAAC(const INTPTR ecfHandle, const INTPTR aacHandle);